[package]
name = "minihttp"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Stjepan Glavina <stjepang@gmail.com>",
]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.3"
httparse = "1.1.2"
time = "0.1"

[dev-dependencies]
async-std = { git = "https://github.com/stjepang/async-std.git", branch = "new-scheduler" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["full"] }
